# dvara_fastapi

./: Dockerfile  README.md  env.template  pyproject.toml  requirements.txt  sonar-project.properties  test_main.py
arthmate_lender_handoff_service/: .env  backupmain.py  backupmain2.py  config.py  main.py  test_client.py
arthmate_lender_handoff_service/data/: 1.json  2.json  PartnerHandoffContextDTO.json  datatested  prepared_data.json
arthmate_lender_handoff_service/helpers/: functions.py  generics.py
arthmate_lender_handoff_service/logger/: config.py
arthmate_lender_handoff_service/resource/: env.ini
perdix_aadhaar_service/: commons.py  main.py
perdix_aadhaar_service/.scannerwork/: report-task.txt
perdix_aadhaar_service/data/: database.py  model.py  schema.py
perdix_aadhaar_service/gateway/: icici.py  perdix_server.py  transform.py
perdix_aadhaar_service/resource/: PidDataSample.xml  uat-sarvagram.perdix.co.in.cer  uat-sarvagram.perdix.co.in.csr
perdix_aadhaar_service/routes/: biometric.py  user.py
perdix_aadhaar_service/service/: crypto.py
tests/: test_perdix_aadhaar_service.py
